# autodox-old

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  MakeFile  README.md  build.sh  canister_ids.json  dfx copy.json  dfx.json  history.txt  package-lock.json  package.json  webpack.config.js
.github/: FUNDING.yml
backend/storage/: Cargo.toml  storage.did
backend/storage/src/: error.rs  lib.rs
backend/storage/src/api/: init_api.rs  mod.rs  query_api.rs  update_api.rs
backend/storage/src/structure/: structure.rs
backend/storage/tests/: test_storage.rs
canisters/smart_contract/: Cargo.toml  smart_contract.did  tests.rs  update.rs
canisters/smart_contract/src/: initialize.rs  lib.rs
canisters/smart_contract/src/nft/: mod.rs  query.rs  tests.rs  types.rs  update.rs
editor/: .gitignore  Cargo.toml  index.html
editor/src/: app.rs  dummy_data.rs  element_tree.rs  handle_mutation.rs  lib.rs  main.css  main.rs  render.rs
editor/src/app_components/: editor_component.rs  mod.rs  render.rs
editor/src/backend/: mod.rs
editor/src/components/: drag.rs  mod.rs  render.rs
editor/src/editor_components/: calendar.rs  form.rs  image.rs  main.rs  mod.rs  qout.rs  table.rs  video.rs
editor/src/insertion_closures/: components.rs  emojies.rs  mentions.rs  mod.rs
editor/src/plugins/: mod.rs
editor/src/plugins/context_menu/: mod.rs
editor/src/plugins/editor_toolbar_plugin/: editor_toolbar.js  main.rs  mod.rs  toolbar.css
editor/src/plugins/inset_component/: caret_position.js  dropdown.css  insertion_component.rs  main.rs  mod.rs  types.rs
editor/src/plugins/mention/: mod.rs
editor/src/plugins/paste_converter/: fetch_pasted.js  mod.rs  trigger_paste.rs
editor/src/utils/: constrector.rs  mod.rs  mouse_move.rs  selection_popover.js
frontend/: .env.example  .gitignore  Cargo.toml  MakeFile  index.html  index.js  package copy.json  package-lock.json  package.json  tailwind.config.js  tailwind.css  vite.config.ts  webpack.config.js
frontend/backend/: index.js
frontend/editor/: Cargo.toml  index.html
frontend/editor/src/: app.rs  element_tree.rs  lib.rs  main.rs
frontend/pages/: profile_info.rs
frontend/public/: aside_navbar.css  drag_drop.css  glue.js  icons.js  loader.css  main.css  text_editor.css  title_bar.css  tooltip.css  tree_list.css
frontend/shared/: Cargo.toml
frontend/shared/src/: invoke.rs  lib.rs  tree.rs
frontend/src/: app.rs  dummy_editor.rs  lib.rs  main.rs  router.rs
frontend/src/app_components/: buttons_group.rs  directory.rs  download_component.rs  file_component.rs  files_category.rs  identify.js  identity.js  markdown_button.rs  mod.rs  page_option_component.rs  save_button.rs  search_filters.rs  title_avatar_component.rs
frontend/src/backend/: element.rs  files.rs  get_files.rs  get_github_data.rs  get_users.rs  handle_data.rs  ic_agent.js  main.rs  mod.rs  query.graphql  schema.graphql  users.rs
frontend/src/components/: avatar.rs  directory.rs  drop_under.rs  file_component.rs  file_data.rs  loading.css  loading.rs  menu.rs  mod.rs  title_bar.rs  title_bar_button.rs  tooltip.css  tooltip.rs  tree_list.rs
frontend/src/editor_components/: form.rs  image.rs  main.rs  mod.rs  render.rs  table.rs
frontend/src/extensions/: get_element.rs  mod.rs
frontend/src/hooks/: initialize_files.rs  mod.rs
frontend/src/pages/: market.rs  mod.rs  permission.css  permission.rs  profile_info.css  profile_info.rs  settings.rs  share.rs  trash.rs
frontend/src/specific_components/: buttons_group.rs  download_component.rs  file_component.css  file_component.rs  file_data.rs  files_category.rs  markdown_button.rs  mod.rs  page_option_component.rs  save_button.rs  search_filters.rs  title_avatar_component.rs
frontend/src/specific_hooks/: mod.rs  save_button.rs
frontend/src/utils/: decode_image.rs  device_info.rs  encode_image.rs  filenode.rs  filetree.rs  get_title_bar.rs  ic_agent.js  image.rs  invoke.rs  menu.rs  mod.rs  mouse_move.rs
frontend/tests/: main.py
frontend/webscoket_server/: Cargo.toml
shared/: Cargo.toml
shared/public/: glue.js
shared/src/: error.rs  id.rs  invoke.rs  lib.rs  traits.rs  tree.rs
shared/src/data_fields/: id.rs  image.rs  mod.rs
shared/src/extensions/: get_element.rs
shared/src/macros/: console_log.rs  css_importer.rs  mod.rs
shared/src/schema/: content.rs  date.rs  editor_update_schema.rs  element.rs  files.rs  mod.rs  save_button.rs  users.rs
src-dfinity/: Cargo.toml  MakeFile  dfx.json  webpack.config.js
src-dfinity-2/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src-dfinity-2/src/: index.js  lib.rs
src-dfinity-2/src/autodox/: lib.rs
src-dfinity/public/: glue.js
src-dfinity/src/: lib.rs
src-dfinity/src/autodox/: Cargo.toml
src-tauri/: Cargo.toml  MakeFile  tauri.conf.json
src-tauri/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_file_tree.rs  m20220923_134917_file_adjacency.rs  m20220923_134920_file_node.rs
src-tauri/src/: main.rs
src-tauri/src/command/: file_command.rs  handle_data.rs  mod.rs
src-tauri/src/entity/: file_adjacency.rs  file_node.rs  file_tree.rs  mod.rs  prelude.rs  tree.rs
src-tauri/src/utils/: mod.rs  uuid_set.rs
tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
tauri-src/: Cargo.toml  history.txt  tauri.conf.json
tauri-src/icons/: icon.icns
tauri-src/src/: context.rs  error.rs  main.rs  prelude.rs  store.rs
tauri-src/src/command/: element.rs  file_command.rs  mod.rs
tauri-src/src/model/: mod.rs
tauri-src/src/tests/: test_files.rs
tauri-src/src/utils/: uuid_set.rs
tauri/migration/: Cargo.toml
tauri/src/: context.rs  ctx.rs  error.rs  main.rs  prelude.rs  store.rs
tauri/src/command/: element.rs  file_command.rs  handle_data.rs  mod.rs  window_commands.rs
tauri/src/entity/: file_adjacency.rs  file_handlers.rs  mod.rs
tauri/src/model/: file_directory.rs  mod.rs
tauri/src/tests/: mod.rs  test_files.rs
tauri/src/utils/: mod.rs  uuid_set.rs  x_take.rs
webscoket_server/: Cargo.toml
webscoket_server/src/: handler.rs  main.rs
(+154 files in other folders)
