[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stylist = { version = "0.10.0", features = ["yew"] }
table-extract = "0.2.2"
yew = "0.19.3"
wasm-bindgen = "0.2"
html-minifier = "3.0.15"
js-sys = "0.3.56"
markup5ever_rcdom = "0.1.0"
shared = { path = "../shared", features = ["frontend"] }
serde = "1.0.144"
serde_json = "1.0.85"
yewdux = "0.8.2"
yew-style-in-rs = "0.4.1"

[features]
default = []
dry-run = ["yew-style-in-rs/dry-run"]

[package.metadata.docs.rs]
cargo-args = ["--features=dry-run"]

[dependencies.web-sys]
version = "0.3.56"

features = [
    'Document',
    'Element',
    'HtmlElement',
    'HtmlInputElement',
    'Node',
    'Window',
    "DomParser",
    "SupportedType",
    "NodeList",
    "Event",
    "EventTarget",
    "HtmlFormElement",
    "DomRect",
    "DataTransfer",
    "DragEvent",
    "Storage",
    "Selection",
    "Range",
    "console",
]

#[dev-dependencies]
#colored = "2.0.0"
