[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stylist = { version = "0.10.0", features = ["yew"] }
table-extract = "0.2.2"
yew = {version = "0.20.0", features = ["csr"]}
emojis = { git = "https://github.com/aliscie/emojis"}
wasm-bindgen = "0.2"
html-minifier = "3.0.15"
js-sys = "0.3.56"
markup5ever_rcdom = "0.1.0"
shared = { path = "../shared", features = ["frontend"] }
serde = "1.0.144"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
serde_json = "1.0.85"
yewdux = "0.9.0"
yew-hooks = "0.2.0"
yew-style-in-rs = "0.4.1"
gloo-timers = "0.2.4"
fuzzy-matcher = "0.3.7"


[features]
default = []
dry-run = ["yew-style-in-rs/dry-run"]

[package.metadata.docs.rs]
cargo-args = ["--features=dry-run"]

[dependencies.web-sys]
version = "0.3.56"

features = [
    'Document',
    'Element',
    'HtmlElement',
    'HtmlInputElement',
    'Node',
    'Window',
    "DomParser",
    "SupportedType",
    "NodeList",
    "Event",
    "EventTarget",
    "EventListener",
    "HtmlFormElement",
    "DomRect",
    "DataTransfer",
    "DragEvent",
    "Storage",
    "Selection",
    "Range",
    "console",
    "KeyboardEvent",
    "MutationEvent",
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
    "DomRectList",
    "HtmlDocument",
    "InputEvent",
]

#[dev-dependencies]
#colored = "2.0.0"
