[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[dependencies]
stylist = { version = "0.10.0", features = ["yew"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
yew-router = "0.17.0"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
serde-wasm-bindgen = "0.4.5"
js-sys = "0.3.60"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_derive = "1.0.152"
indexmap = { version = "1.9.2", features = ["serde"] }
reqwest = { version = "0.11.13", features = ["json"] }
graphql_client = "0.12.0"
anyhow = "1.0.68"
cfg-if = "1.0.0"
yewdux = "0.9.0"
futures = "0.3.25"
editor = { path = "../editor" }
shared = { path = "../shared", features = ["frontend"] }
lazy_static = "1.4.0"
getrandom = { version = "0.2.8", features = ["js"] }
rand = "0.8.5"
uuid = { version = "1.2.2", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "js",
    "serde",
] }
dotenv = "0.15.0"
gloo = "0.8.0"
blob = "0.3.0"
cargo-watch = "8.3.0"
mexprp = "0.1.0"

[dependencies.web-sys]
version = "0.3.60"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'HtmlInputElement',
    'Node',
    'Window',
    "DomParser",
    "SupportedType",
    "NodeList",
    "Event",
    "EventTarget",
    "HtmlFormElement",
    "DomRect",
    "DataTransfer",
    "DragEvent",
    "Storage",
    "Selection",
    "Range",
    "console",
    "DomTokenList",
    "UiEvent",
    "HtmlTextAreaElement",
    "NamedNodeMap",
    "Attr",
    "MouseEvent",
    "KeyboardEvent",
    "ImageData",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlTableCellElement",
]

[features]
web = []
editor = ["web"]
# [dev-dependencies]
# colored = "2.0.0"
