#TODO Aman
# Explane Why  we need this?
# Goal: To share functionality and code between crates
# usage: create reusable and DRY code that can be used by more that one crate

[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.144"
serde_json = "1.0.85"
serde_derive = "1.0.144"
yewdux = "0.8.2"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
js-sys = "0.3.59"
cfg-if = "1.0.0"
lazy_static = "1.4.0"
