[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stylist = { version = "0.10.0", features = ["yew"] }
serde = { version = "1.0.144", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics", "js", "serde"] }
indexmap = { version = "1.9.1", features = ["serde"] }
serde_json = "1.0.85"
serde_derive = "1.0.144"
cfg-if = "1.0.0"
lazy_static = "1.4.0"


yewdux = { version = "0.8.2", optional = true }
wasm-bindgen = { version = "0.2.78", optional = true }
wasm-bindgen-futures = { version = "0.4.28", optional = true }
js-sys = { version = "0.3.59", optional = true }


[features]
frontend = ["dep:yewdux", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys"]
backend = []
full = ["frontend", "backend"]


[dependencies.web-sys]
version = "0.3.56"

features = [
    'Document',
    'Element',
    'HtmlElement',
    'HtmlInputElement',
    'Node',
    'Window',
    "DomParser",
    "SupportedType",
    "NodeList",
    "Event",
    "EventTarget",
    "HtmlFormElement",
    "DomRect",
    "DataTransfer",
    "DragEvent",
    "Storage",
    "Selection",
    "Range",
    "console",
    "DomTokenList", #for class_list
    "UiEvent",
    "HtmlTextAreaElement",
    "NamedNodeMap",
    "Attr",
    "MouseEvent",
]
