#TODO Aman
# Explane Why  we need this?
# Goal: To share functionality and code between crates
# usage: create reusable and DRY code that can be used by more that one crate

[package]
name = "src_ic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics", "js", "serde"] }
serde_json = "1.0.85"
serde_derive = "1.0.144"
cfg-if = "1.0.0"
lazy_static = "1.4.0"
yewdux = { version = "0.8.2", optional = true }
wasm-bindgen = { version = "0.2.83", optional = true }
wasm-bindgen-futures = { version = "0.4.28", optional = true }
js-sys = { version = "0.3.59", optional = true }

wasm-bindgen-test = "0.3"
log = "0.4"
strum = "0.19"
strum_macros = "0.19"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }


[dependencies.web-sys]
version = "0.3.4"
features = [
    'KeyboardEvent',
]


[features]
autodox_assets = ["dep:yewdux", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys"]
backend = []
full = ["autodox_assets", "backend"]


