[package]
name = "tauri-yew-demo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "tauri-yew-demo"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.143", features = ["derive"] }
tauri = { version = "1.0.4", features = ["api-all"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
