[package]
name = "tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "tauri"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.143", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all"] }
shared = { path = "../shared" }
tokio = { version = "1.21.1", features = ["full"] }
sea-orm = { version = "^0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
sea-query = { version = "^0.26.3", features = ["thread-safe"] }
dotenv = "0.15.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

