[package]
name = "smart_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.6.7"
ic-kit = "0.4.8"
candid = "0.7.18"
serde = "1"
ic-stable-memory = "0.2.4"
speedy = "0.8.2"
indexmap = { version = "1.9.1", features = ["serde"] }
shared = { path = "../../shared", features = ["backend"] , default-features = false}
ic-cdk-macros = "0.6.0"
serde_json = "1.0.91"
